Noteworthy changes in version 1.2.2
------------------------------------------------

 * Minor changes to some function declarations.  Buffer arguments are
   now typed as void pointer.  This should not affect any compilation.
   A bug in the definition of gcry_cipher_register has been fixed.

 * Interface changes relative to the 1.2.1 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 gcry_cipher_encrypt    CHANGED: Arguments IN and OUT are now void*.
 gcry_cipher_decrypt    CHANGED: Arguments IN and OUT are now void*.
 gcry_create_nonce      CHANGED: Argument BUFFER is now void*.
 gcry_md_ctl            CHANGED: Argument BUFFER is now void*.
 gcry_sexp_sprint       CHANGED: Argument BUFFER is now void*.
 gcry_mpi_scan          CHANGED: Argument BUFFER is now void*.
 gcry_cipher_register   CHANGED: Argument ALGORITHM_ID is now int*.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


Noteworthy changes in version 1.2.1 (2005-01-05)
------------------------------------------------

 * Portability fixes, memory allocation fixes and other minor things.

 * Support to build as a W32 static library.

 * Changed the way the RNG gets initialized. This allows to keep it
   uninitialized as long as no random numbers are used.  To override
   this, the new macro gcry_fast_random_poll may be used.  It is in
   general a good idea to spread this macro into the application code
   to make sure that these polls happen often enough.

 * Interface changes relative to the 1.2.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 gcry_fast_random_poll	NEW
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


Noteworthy changes in version 1.2.0 (2004-04-15)
------------------------------------------------

 * First stable release.


Noteworthy changes in version 1.1.94 (2004-03-29)
-------------------------------------------------

 * The support for multi-threaded users goes into its third
   incarnation.  We removed compile time support for thread libraries.