@@ -1,3 +1,7 @@
+2005-09-13  Werner Koch  <wk@g10code.com>
+
+	* random.c: New.
+
 2005-06-16  Werner Koch  <wk@g10code.com>
 
 	* basic.c (check_one_md): Made P unsigned.
